--- a/app/views/skm/settings/index.html.erb
+++ b/app/views/skm/settings/index.html.erb
@@ -18,8 +18,8 @@
         <tbody>
 
             <tr>
-              <td class="labelCol"><label><%= @settings.query_by_code("SKM_HEADER_AUDIT").first[:name]%></label></td>
-              <td class="data2Col"><%= check_img(@settings.query_by_code("SKM_HEADER_AUDIT").first[:value])%></td>
+              <td class="labelCol"><label><%= @setting_names[:SKM_HEADER_AUDIT]%></label></td>
+              <td class="data2Col"><%= check_img(@setting_values[:SKM_HEADER_AUDIT])%></td>
             </tr>
 
         </tbody>
