Bug #1191  首页portlet上的链接到新页面后,无法正常返回 取消task portlet上的back参数即可

--- a/app/views/irm/home/_tasks.html.erb
+++ b/app/views/irm/home/_tasks.html.erb
@@ -42,7 +42,7 @@
                    </td>
                    <td>
                      <div>
-                       <%= link_to task[:title],task[:url_options],{:back=>true} %>
+                       <%= link_to task[:title],task[:url_options] %>
                       </div>
                    </td>
                    <td>
