为全局设置页面添加上传图片的错误提示,修改显示错误的helper名称为system_parameter_errors_for

--- a/app/views/irm/global_settings/_edit_form.html.erb
+++ b/app/views/irm/global_settings/_edit_form.html.erb
@@ -16,7 +16,7 @@
     </table>
   </div>
   <div class="pbBody">
- <%= errors_for(@errors) %>
+ <%= system_parameter_errors_for(@errors) %>
 
     <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
       <span class="pbSubExtra">
