--- a/app/views/reports/incident_request_month_summary/_params.html.erb
+++ b/app/views/reports/incident_request_month_summary/_params.html.erb
@@ -5,8 +5,8 @@
     <tr>
       <td width="30%"></td>
       <td></td>
-      <td>
-        <label for="loginPerson_label"><%= t(:label_irm_external_system) %></label>
+      <td><fieldset>
+        <legend><%= t(:label_irm_external_system) %> </legend>
         <div style="white-space:nowrap">
           <%= select_tag_multiple(
                       "program_params[external_system_id][]",
@@ -14,6 +14,7 @@
                       "program_params[external_system_mul]",
                       program_params[:external_system_mul] ? program_params[:external_system_mul] : 'N')%>
         </div>
+      </fieldset>
       </td>
       <td>
         <fieldset>
