--- a/app/views/reports/survey_report/_mail.html.erb
+++ b/app/views/reports/survey_report/_mail.html.erb
@@ -8,69 +8,37 @@
    <div>
        <table id="reportData" count="<%=datas[:datas].count%>">
          <thead>
-           <tr>
-             <th style="width:110px;">
-               <div><%= t(:label_irm_person) %></div>
-             </th>
-             <th style="width:110px;">
-               <div><%= t(:label_irm_person_login) %></div>
-             </th>
-             <th style="width:110px;">
-               <div><%= t(:label_irm_login_record_user_ip) %></div>
-             </th>
-             <th style="width:160px;">
-               <div><%= t(:label_irm_login_record_operate_system) %></div>
-             </th>
-             <th  style="width:160px;">
-               <div><%= t(:label_irm_login_record_browser) %></div>
-             </th>
-             <th style="width:180px;">
-               <div><%= t(:label_irm_login_record_login_at) %></div>
-             </th>
-             <th style="width:180px;">
-               <div><%= t(:label_irm_login_record_logout_at) %></div>
-             </th>
-           </tr>
+            <tr>
+              <th style="width:110px;">
+                <div><%= t(:label_csi_survey_title) %></div>
+              </th>
+              <th style="width:110px;">
+                <div><%= t(:label_csi_survey_person_count) %></div>
+              </th>
+              <th style="width:110px;">
+                 <div><%= t(:label_csi_survey_date) %></div>
+              </th>
+            </tr>
          </thead>
          <tbody>
          <% datas[:datas].each do |data| %>
-         <tr id="<%=data[:id]%>">
-           <td>
-             <div>
-               <%= data[:full_name] %>
-             </div>
-           </td>
-           <td>
-             <div>
-               <%= data[:login_name] %>
-             </div>
-           </td>
-           <td>
-             <div>
-               <%= data[:user_ip] %>
-             </div>
-           </td>
-           <td>
-             <div>
-               <%= data[:operate_system] %>
-             </div>
-           </td>
-           <td>
-             <div>
-               <%= data[:browser] %>
-             </div>
-           </td>
-           <td>
-             <div>
-               <%= show_report_cell(data[:login_at]) %>
-             </div>
-           </td>
-           <td>
-             <div>
-               <%= show_report_cell(data[:logout_at]) %>
-             </div>
-           </td>
-         </tr>
+          <tr id="<%=data[:id]%>">
+            <td>
+              <div>
+                <%= data[:title] %>
+              </div>
+            </td>
+            <td>
+              <div>
+                <%= data[:total_count] %>
+              </div>
+            </td>
+            <td>
+              <div>
+                <%= data[:date] %>
+              </div>
+            </td>
+          </tr>
          <% end -%>
          </tbody>
        </table>
