Feature #1209 修改业务对象根据关联关系生成查询SQL的方式

--- a/app/views/irm/object_attributes/_new_step_2.html.erb
+++ b/app/views/irm/object_attributes/_new_step_2.html.erb
@@ -92,6 +92,12 @@
                         <td class="labelCol empty">&nbsp;</td>
                         <td class="dataCol empty">&nbsp;</td>
                       </tr>
+                      <tr>
+                        <td class="labelCol"><label for="relation_type"><%=t(:label_irm_object_attribute_relation_type)%></label></td>
+                        <td class="dataCol"><%= f.blank_select(:relation_type,avaliable_relation_type,{},:required=>true,:id=>"relation_type") %></td>
+                        <td class="labelCol empty">&nbsp;</td>
+                        <td class="dataCol empty">&nbsp;</td>
+                      </tr>
                      </tbody>
                 </table>
               </div>
