--- a/app/views/irm/object_attributes/_show_table_column.html.erb
+++ b/app/views/irm/object_attributes/_show_table_column.html.erb
@@ -85,6 +85,12 @@
                     <td class="labelCol empty">&nbsp;</td>
                     <td class="dataCol empty">&nbsp;</td>
                   </tr>
+                  <tr>
+                    <td class="labelCol"><label for="relation_type"><%=t(:label_irm_object_attribute_relation_type)%></label></td>
+                    <td class="dataCol"><%= @object_attribute[:relation_type_name] %>(<%= @object_attribute[:relation_type] %>)</td>
+                    <td class="labelCol empty">&nbsp;</td>
+                    <td class="dataCol empty">&nbsp;</td>
+                  </tr>
                  </tbody>
             </table>
           </div>
