--- a/app/views/reports/incident_amount_month_by_status/_mail.html.erb
+++ b/app/views/reports/incident_amount_month_by_status/_mail.html.erb
@@ -3,7 +3,6 @@
        padding: 3px 2px 3px 5px;
   }
 </style>
-
 <!--  irm datatable      -->
  <div class="irm-datatable">
    <div>
@@ -35,4 +34,4 @@
        </table>
    </div>
  </div>
-<!--  end irm datatable      -->
+<!--  end irm datatable      --
