添加调查问卷统计结果图对比标准

--- a/app/views/csi/survey_results/_check_result.html.erb
+++ b/app/views/csi/survey_results/_check_result.html.erb
@@ -18,7 +18,9 @@
     <div><%= (datas[:grouped_option_counts][option.id]||{})[:percent]||0%>%</div>
   </td>
   <td class="left" width="210px">
-    <div class="progressBar progressBar<%= (index%6)+1%>" style="width:<%=(datas[:grouped_option_counts][option.id]||{})[:percent]||0%>%;"></div>
+    <div class="barBgs">
+      <div class="progressBar progressBar<%= (index%6)+1%>" style="width:<%=(datas[:grouped_option_counts][option.id]||{})[:percent]||0%>%;"></div>
+    </div>
   </td>
   <td class="center">
     <div><%= (datas[:grouped_option_counts][option.id]||{})[:option_count]||0 %></div>
@@ -33,10 +35,12 @@
     <div><%= t(:label_csi_survey_subjects_other) %> [<%= link_to(t(:label_csi_survey_result_show_more),{:action=>"show_input",:id=>subject.id},{:back=>true}) %>]</div>
   </td>
   <td class="right" width="60px">
-    <div><%= other_percent %>%</div>
+     <div><%= other_percent %>%</div>
   </td>
   <td class="left" width="210px">
-    <div class="progressBar progressBar<%=(subject.subject_options.length%6)+1%>" style="width:<%=other_percent%>%;"></div>
+    <div class="barBgs">
+      <div class="progressBar progressBar<%=(subject.subject_options.length%6)+1%>" style="width:<%=other_percent%>%;"></div>
+    </div>
   </td>
   <td class="center">
     <div><%= datas[:grouped_input_counts][subject.id]||0 %></div>
