--- a/app/views/csi/survey_results/_string_result.html.erb
+++ b/app/views/csi/survey_results/_string_result.html.erb
@@ -10,7 +10,7 @@
   <td>
     <div><%= link_to(t(:label_csi_survey_result_show_more),{:action=>"show_input",:id=>subject.id},{:back=>true}) %></div>
   </td>
-  <td class="center">
+  <td class="center">           21
     <div><%= datas[:grouped_input_counts][subject.id]||0 %></div>
   </td>
 </tr>
