--- a/app/views/csi/survey_results/statistics.html.erb
+++ b/app/views/csi/survey_results/statistics.html.erb
@@ -22,6 +22,10 @@
     .subjectResult td.center{
         text-align: center;
     }
+    div.barBgs {
+        background-color:#efefef;
+        cursor: pointer;
+    }
     .subjectResult td div.progressBar{
         height: 20px;
     }
