--- a/app/views/irm/org_data_accesses/show.html.erb
+++ b/app/views/irm/org_data_accesses/show.html.erb
@@ -2,7 +2,7 @@
   <table cellpadding="0" cellspacing="0" border="0">
     <tbody>
       <tr>
-        <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_irm_data_access_list) %></h2></td>
+        <td class="pbTitle"><h2 id="mainTitle" class="mainTitle"><%=params[:org_name].to_s+ t(:label_irm_data_access) %></h2></td>
         <td id="topButtonRow" class="pbButton">
           <div class="button" id="exportData"><a href="javascript:void(0)" class="loadButton" load_href="<%= url_for(:action=>"edit",:id=>"{org_id}")%>"><%= t(:edit) %></a></div>
         </td>
