--- a/app/views/irm/functions/index.html.erb
+++ b/app/views/irm/functions/index.html.erb
@@ -10,10 +10,7 @@
                 <div class="button"><%= link_to t(:new), {:action => "new"}%></div>
               </td>
               <td class="pbHelp">
-                <select title="显示所选内容" name="hotlist_mode" id="hotlist_mode"><option value="2">最近创建</option>
-                <option value="1">最近修改</option>
-                <option selected="selected" value="3">最近查看</option>
-                </select>
+                <div id="functionsSearchBox"></div>
               </td>
             </tr>
           </tbody>
@@ -30,11 +27,11 @@
         </div>
         <%= datatable("functions_list",{:action=>"get_data",:format=>"json"},
                       [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template", :width => "80px"},
-                       {:key=>"code",:label=>t(:label_irm_function_function_code)},
-                       {:key=>"name",:label=>t(:label_irm_function_name)},
+                       {:key=>"code",:label=>t(:label_irm_function_function_code),:searchable=>true},
+                       {:key=>"name",:label=>t(:label_irm_function_name),:searchable=>true},
                        {:key=>"description",:label=>t(:label_irm_function_description)},
                        {:key=>"status_code",:label=>t(:active),:formatter=>"Y.irm.template"}],
-                      {:paginator_box=>"functionPaginator"}) %>
+                       {:search_box=>"functionsSearchBox",:paginator_box=>"functionPaginator"}) %>
         <div id="functionPaginator"></div>
       </div>
     </div>
