--- a/app/views/irm/organization_infos/index.html.erb
+++ b/app/views/irm/organization_infos/index.html.erb
@@ -1,4 +1,44 @@
 <%= page_title %>
+<div id="ep" class="detail-block page-block">
+  <div class="pbHeader">
+    <table cellpadding="0" cellspacing="0" border="0">
+      <tbody>
+        <tr>
+          <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_irm_organization_info) %></h2></td>
+          <td  class="pbButton">
+
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+  <div class="pbBody">
+    <div class="pbSubsection">
+      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
+        <tbody>
+            <tr>
+              <td class="labelCol"><label><%=(t :label_irm_organization_short_name)%></label></td>
+              <td class="dataCol"><%=@organization.short_name%></td>
+              <td class="labelCol empty">&nbsp;</td>
+              <td class="dataCol empty">&nbsp;</td>
+            </tr>
+            <tr>
+              <td class="labelCol"><label><%=(t :label_irm_organization_name)%></label></td>
+              <td class="dataCol"><%=@organization[:name]%></td>
+              <td class="labelCol empty">&nbsp;</td>
+              <td class="dataCol empty">&nbsp;</td>
+            </tr>
+            <tr>
+              <td class="labelCol"><label><%=(t :label_irm_organization_description)%></label></td>
+              <td class="dataCol"><%=@organization[:description]%></td>
+              <td class="labelCol empty">&nbsp;</td>
+              <td class="dataCol empty">&nbsp;</td>
+            </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
 <div class="listRelatedObject setupBlock">
     <div class="page-block">
       <div class="pbHeader">
